Mon May 28 10:30:51 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Minor changes to the ./prepare script to change the package
	  name according the distribution name to the configure.in.

Sun May 27 22:24:57 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Created new distribution system.  Added file `distributions'
	  that defines all the distributions that can be created out of
	  the SILC source tree.  The ./prepare script now reads that
	  file to determine how to prepare the distributions.  The
	  first argument to the ./prepare is the name of the distribution
	  and second is the version of the distribution.  If given
	  without arguments it creates the default (toolkit) distribution
	  with the default version (defined in ./prepare).

	  All Makefile.am files that are subject to the distributions
	  are now named as Makefile.am.pre.  These are ./Makefile.am
	  and lib/Makefile.am.  Others may be changed later.

Sun May 27 15:57:17 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added invite list, ban list, some key management and connection
	  error message printing to module formats in the Irssi SILC client.

	* Added new silc_client_set_away_message to set the away message
	  that is back to the person who sent private message.  The 
	  affected file lib/silcclient/silcapi.h and the
	  lib/silcclient/client_prvmsg.c.

Sun May 27 12:39:48 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed the private message sending in the Irssi SILC client,
	  added local command KEY to the Irssi SILC client.

	  Added key management and key agreement message formats to the
	  irssi/src/fe-common/silc/module-formats.[ch].

	  Added USERS (alias WHO) printing, server/router operator
	  indication and LIST command printing to the module formats.

Sat May 26 17:43:42 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed channel joining notify handling, cumode notify handling
	  from Irssi SILC client.
