@@ -1,4 +1,3 @@
-# Generated automatically from Makefile.defines.in by configure.
 #
 #  Makefile.defines.in
 #
@@ -32,21 +31,21 @@
 #
 # Generic definitions
 #
-silc_top_srcdir = /home/priikone/silc
+silc_top_srcdir = @SILC_TOP_SRCDIR@
 
 #
 # Common libraries that are linked against the created executable
 #
-SILC_COMMON_LIBS =  -lncurses -ldl -L$(silc_top_srcdir)/lib -lsilc
+SILC_COMMON_LIBS = @LIBS@ -L$(silc_top_srcdir)/lib -lsilc
 
 #
 # Installation defines
 #
-silc_etcdir = /etc/silc
-silc_modulesdir = $(prefix)/modules
-silc_helpdir = $(prefix)/help
-silc_docdir = $(prefix)/doc
-silc_logsdir = $(prefix)/logs
+silc_etcdir = @ETCDIR@
+silc_modulesdir = $(prefix)/@MODULESDIR@
+silc_helpdir = $(prefix)/@HELPDIR@
+silc_docdir = $(prefix)/@DOCDIR@
+silc_logsdir = $(prefix)/@LOGSDIR@
 
 #
 # INCLUDE defines
