@@ -352,6 +352,7 @@ AC_ARG_WITH(gmp,
     AC_CHECK_HEADER(gmp.h,
       AC_CHECK_LIB(gmp, __gmpz_init,
         AM_CONDITIONAL(SILC_BUILD_GMP, test x$withval = yes)
+        LIBS="$LIBS -L/usr/lib -L/usr/local/lib -lgmp"
         AC_MSG_RESULT(GMP will not be compiled),
         AM_CONDITIONAL(SILC_BUILD_GMP, test x$withval != yes)
         AC_MSG_RESULT(GMP will be compiled)
@@ -365,6 +366,7 @@ esac ], [
     AC_CHECK_LIB(gmp, __gmpz_init,
       build_gmp=false
       AM_CONDITIONAL(SILC_BUILD_GMP, test x$build_gmp = xtrue)
+      LIBS="$LIBS -L/usr/lib -L/usr/local/lib -lgmp"
       AC_MSG_RESULT(GMP will not be compiled),
       build_gmp=true
       AM_CONDITIONAL(SILC_BUILD_GMP, test x$build_gmp = xtrue)
@@ -392,8 +394,14 @@ AC_CONFIG_SUBDIRS(lib/silcmath/gmp)
 AC_CONFIG_SUBDIRS(lib/trq)
 #AC_CONFIG_SUBDIRS(lib/zlib)
 
+# Some final substitutions
+SILC_TOP_SRCDIR=`pwd`
+AC_SUBST(SILC_TOP_SRCDIR)
+AC_SUBST(LIBS)
+
 AC_OUTPUT( \
 Makefile
+Makefile.defines
 doc/Makefile
 includes/Makefile
 lib/Makefile
@@ -408,3 +416,4 @@ lib/silcske/Makefile
 lib/silcutil/Makefile
 silc/Makefile
 silcd/Makefile)
+
