@@ -35,6 +35,5 @@ libsilccore_a_SOURCES = \
 
 EXTRA_DIST = *.h
 
-INCLUDES = -I. -I.. -I../silccrypt -I../silcmath -I../silcske \
-	-I../silcsim -I../.. -I../silcutil -I../../includes \
-	-I../silcmath/gmp -I../trq
+include $(top_srcdir)/Makefile.defines
+
