@@ -40,6 +40,5 @@ libsilccrypt_a_SOURCES = \
 
 EXTRA_DIST = *.h
 
-INCLUDES = -I. -I.. -I../silccore -I../silcmath -I../silcske \
-	-I../silcsim -I../.. -I../silcutil -I../../includes \
-	-I../silcmath/gmp -I../trq
+include $(top_srcdir)/Makefile.defines
+
