@@ -33,6 +33,5 @@ libsilcmath_a_SOURCES = \
 
 EXTRA_DIST = *.h
 
-INCLUDES = -I. -I.. -I../silccrypt -I../silccore -I../silcske \
-	-I../silcsim -I../.. -I../silcutil -I../../includes \
-	-I./gmp -I../trq
+include $(top_srcdir)/Makefile.defines
+
