@@ -27,6 +27,5 @@ libsilcske_a_SOURCES = \
 
 EXTRA_DIST = *.h
 
-INCLUDES = -I. -I.. -I../silccrypt -I../silccore -I../silcutil \
-	-I../silcsim -I../silcmath -I../.. -I../../includes \
-        -I../silcmath/gmp -I../trq
+include $(top_srcdir)/Makefile.defines
+
