@@ -89,7 +89,7 @@ sed -e "/SILC_VERSION/s//$dist_version/" configure.in.pre >>configure.in2
 sed -e "/SILC_PACKAGE/s//silc-"$distribution"/" configure.in2 >configure.in
 rm -f configure.in2
 
-touch Makefile.defines
+cp Makefile.defines.in Makefile.defines
 
 aclocal
 autoconf
